fix the background z-index

--- a/client-side/src/app/components/section/section.component.scss
+++ b/client-side/src/app/components/section/section.component.scss
@@ -40,13 +40,12 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        z-index: -1;
+        z-index: 0;
 
         .back-template {
             width: 8.3333%;
             height: 100%;
             background-color: #BEC3E5;
-            z-index: -100;
             opacity: 0.1;
             border-right: 2px dashed #000;
             float: left;
